--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
       - name: Compile
-        run: gcc -Wall -Werror -o dbSQL dbSQLcmpl.c
+        run: gcc -Wall -o dbSQL dbSQLcmpl.c
 
       - name: Run program
         run: ./dbSQL
